[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/player/player.gd" type="Script" id=1]
[ext_resource path="res://objects/player/sprites/walk/pixil-frame-0 (2).png" type="Texture" id=2]
[ext_resource path="res://objects/player/sprites/walk/pixil-frame-0 (3).png" type="Texture" id=3]
[ext_resource path="res://objects/player/sprites/stay.png" type="Texture" id=4]
[ext_resource path="res://objects/player/sprites/walk/pixil-frame-0.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.5, 57.625 )

[node name="player" type="KinematicBody2D"]
process_priority = 1
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "stay"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 55.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -1.625 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
